<resources>
    <string name="google_geo_api_key">AIzaSyAEK_qwu1Ph_2Le_jYahcqjbRwfP3wjaGg</string>
    <string name="app_name">Elearning</string>
    <string name="action_settings">Pengaturan</string>
    <string name="action_logout">Keluar</string>
    <string name="title_activity_profile">Profil</string>
    <string name="text_bio_data">Data Diri</string>
    <string name="text_fullname">Nama Lengkap</string>
    <string name="text_b_date">Tanggal Lahir</string>
    <string name="text_rollno">Roll Number</string>
    <string name="text_standard">Pelatihan</string>
    <string name="text_branch">Branch</string>
    <string name="text_semester">Semester</string>
    <string name="text_division">Division</string>
    <string name="text_contact_details">Rincian Kontak</string>
    <string name="text_address">Alamat</string>
    <string name="text_parent_contact">Kontak Orang Tua</string>
    <string name="text_city">Kota</string>
    <string name="text_batch">Batch</string>
    <!-- Strings related to Menu -->
    <string name="menu_profile">Profil</string>
    <string name="menu_attendence">Absensi</string>
    <string name="menu_exam">Ujian</string>
    <string name="menu_result">Hasil Ujian</string>
    <string name="menu_teacher">Instruktur</string>
    <string name="menu_growth">Kemajuan</string>
    <string name="menu_holiday">Hari Libur</string>
    <string name="menu_news">Materi</string>
    <string name="menu_notice">Pengumuman</string>
    <string name="title_activity_attendence">Absensi</string>
    <string name="title_activity_login">Masuk</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_message">Pesan</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_sign_in_note"><b>Catatan</b> </string>
    <string name="action_sign_in_note_text">Usernama dan Password diberikan oleh Administrator</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="error_invalid_email">Alamat email tidak cocok</string>
    <string name="error_invalid_password">Password terlalu pendek</string>
    <string name="error_incorrect_password">Password salah</string>
    <string name="error_field_required">Field ini harus diisi</string>
    <string name="permission_rationale">"Hubungi Administrator" </string>
    <string name="title_activity_result">Hasil Ujian</string>
    <string name="title_activity_exam">Ujian</string>
    <string name="title_activity_teacher">Instruktur</string>
    <string name="title_activity_growth">Kemajuan</string>
    <string name="title_activity_holidays">Hari Libur</string>
    <string name="title_activity_news">Materi</string>
    <string name="title_activity_notice">Pengumuman</string>
    <string name="title_activity_enquiry">Pertanyaan</string>

    <string name="prompt_subject">Subjek</string>
    <string name="title_activity_result_list">Rincian Hasil Ujian</string>
    <string name="title_activity_top_student">Siswa Terbaik</string>
    <string name="main_activity_logout">Sukses Keluar</string>
    <string name="permission_required">Aplikasi membutuhkan beberapa izin, tolong disediakan</string>
    <string name="fire">Ya</string>
    <string name="cancel">Batal</string>
    <string name="attendence_show">Show</string>
    <string name="enquiry_add_message"> + Pesan Baru</string>
    <string name="content_result_list_student_name">Nama : </string>
    <string name="content_result_list_exam_title">Nama Ujian</string>
    <string name="content_result_list_date">01/12/2016</string>
    <string name="content_result_list_subject">Subjek</string>
<!--     <string name="content_result_list_total_marks">Total Nilai</string> -->
    <string name="content_result_list_marks">Nilai</string>
<!--     <string name="content_result_list_obtain">Perolehan</string> -->
    <string name="content_result_list_perstage">50%</string>
    <string name="dialog_attend_note_attendance_note">Catatan Kehadiran</string>
    <string name="dialog_enquiry_message">Pesan Pertanyaan</string>
    <string name="row_for_event_title">Judul</string>
    <string name="row_for_event_start_date">Tanggal Dimulai</string>
    <string name="row_for_event_end_date">Tanggal Berakhir</string>
    <string name="row_for_event_new_text">Teks Baru</string>
    <string name="row_for_event_file_attachment">Download Materi</string>
    <string name="row_for_event_instruktur">Instruktur</string>
</resources>
