<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.education.ProfileActivity"
    tools:showIn="@layout/activity_profile">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="10dp">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/text_bio_data"
           android:padding="10dp"
           android:background="@color/color_4"
           android:textColor="#ffffff"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text_fullname"/>
            <EditText
                android:id="@+id/fullname"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/text_b_date"/>

           <EditText
               android:id="@+id/birthdate"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:inputType="date"/>



       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="Pangkat"/>
           <EditText
               android:id="@+id/pangkat"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:inputType="text"/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="Korp"/>

           <EditText
               android:id="@+id/korp"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:inputType="text"/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="NRP"/>

           <EditText
               android:id="@+id/nrp"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:inputType="text"/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="Matra"/>

           <EditText
               android:id="@+id/matra"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:inputType="text"/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="Kesatuan"/>


           <EditText
               android:id="@+id/kesatuan"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:inputType="text"/>

       </LinearLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="Jabatan"/>

           <EditText
               android:id="@+id/jabatan"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:inputType="text"/>



       </LinearLayout>



       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/text_standard"/>

           <TextView
               android:id="@+id/standard"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               />

       </LinearLayout>


       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:text="@string/text_contact_details"

           android:background="@color/color_4"
           android:textColor="#ffffff"/>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/text_address"/>

           <EditText
               android:id="@+id/address"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:inputType="text"/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/text_city"/>

           <EditText
               android:id="@+id/city"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:inputType="text"/>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:paddingTop="5dp"
           android:paddingBottom="5dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/text_parent_contact"/>

           <EditText
               android:id="@+id/parent_contact"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:inputType="text"/>

       </LinearLayout>
   </LinearLayout>
</android.support.v4.widget.NestedScrollView>
